--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,8 @@
 
 \section{The Genotype-Phenotype Problem}
 
-Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that genome sequences will be known for millions of people within coming decades. Unfortunately, our limited ability to interpret personal genomes stands in stark contrast with this development. According to the data obtained as part of the 1000 Genomes Project, every person carries 100-400 missense variants that are so rare that they have likely never been seen before in the clinic~\cite{1000genomes}. The majority of clinical variants  are currently classified as variants of uncertain significance (VUS). For example, over 98\% of missense variants for a gene panel assessing germline cancer risk variants~\cite{Maxwell2016} have been found to be VUS.
+Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that within coming decades personal genomes will be known for a substantial part of the global populace. Unfortunately, our limited ability to interpret the variation found within them stands in stark contrast with this development. The majority of clinical variants  are currently classified as variants of uncertain significance (VUS). For example, over 98\% of missense variants for a gene panel assessing germline cancer risk variants~\cite{Maxwell2016} have been resigned to be VUS. 
+According to the data obtained as part of the 1000 Genomes Project, every person carries 100-400 missense variants that are so rare that they have likely never been seen before in the clinic~\cite{1000genomes}. 
 
 \section{\textit{In silico} approaches to variant function assessment}
 
