--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{ut-thesis}
+\documentclass[12pt]{ut-thesis}
 
 \degree{Doctor of Philosophy}
 \department{Molecular Genetics}
@@ -6,6 +6,7 @@
 \author{Jochen Weile}
 \title{An atlas of variant effects in human disease genes}
 
+\newcommand{\gene}[1]{\textit{#1}}
 
 %% List only down to subsections in the table of contents;
 %% 0=chapter, 1=section, 2=subsection, 3=subsubsection, etc.
@@ -18,6 +19,7 @@
 %%%%%%%%%%%%      MAIN  DOCUMENT      %%%%%%%%%%%%
 
 \begin{document}
+
 
 \begin{preliminary}
 
