--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \title{An atlas of variant effects in human disease genes}
 
 \newcommand{\gene}[1]{\textit{#1}}
+\newcommand{\species}[1]{\textit{#1}}
 
 %% List only down to subsections in the table of contents;
 %% 0=chapter, 1=section, 2=subsection, 3=subsubsection, etc.
