--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{ut-thesis}
+\usepackage{xcolor}
 
 \degree{Doctor of Philosophy}
 \department{Molecular Genetics}
@@ -8,6 +9,7 @@
 
 \newcommand{\gene}[1]{\textit{#1}}
 \newcommand{\species}[1]{\textit{#1}}
+\newcommand\todo[1]{\texttt{\textcolor{red}{\textbf{TODO:} #1}}}
 
 %% List only down to subsections in the table of contents;
 %% 0=chapter, 1=section, 2=subsection, 3=subsubsection, etc.
@@ -63,7 +65,7 @@ The author gratefully acknowledges funding by the National Institutes of Health,
 
 %% This adds a line for the Bibliography in the Table of Contents.
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{thesis}
 
 \end{document}
