--- a/introduction.tex
+++ b/introduction.tex
@@ -49,6 +49,14 @@ Complementation and Y2H promise to be useful tools in the classification of vari
 An ideal context for developing sequence-function technology can be found in the sumoylation pathway. The pathway is of great biological importance, mechanistically complex and has been well studied previously in terms of structure and mechanism. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes, explaining the essentiality of the core members of the pathway~\todo{REF}. 
 Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\cite{sumoylation}. After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. Next, an E1 activation complex forms a thioester bond between the SUMO diglycine and a cysteine residue within the E1 protein under the consumption of ATP. The activated SUMO is then transferred to the E2 conjugase (UBE2I) via transesterification. The loaded E2 can recognize target proteins via an exposed motif of four amino acids containing a central lysine~\cite{Sampson2001}. This lysine enters the E2’s active site where it comes into contact with SUMO’s diglycine, forming a peptide bond between its $\epsilon$-amino group and SUMO’s C-terminus~\cite{BernierVillamor2002}. This process can be made more efficient in the presence of some classes E3 proteins or outright forced by others~\cite{Streich2016}. Like ubiquitin, SUMO can also form chains, a process which relies on E2 homodimerization as well as the non-covalent binding of a second SUMO molecule to the loaded E2~\cite{CapiliLima2007,Alontaga2015}. 
 
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{img/sumoylation_steps.pdf}
+	\caption{Steps in the sumoylation pathway}
+\end{figure}
+
+
 Given the complexity of the Sumoylation system, especially surrounding the E2 component, an examination of sequence-structure-function relationships becomes a multifaceted problem. Mutations could in principle affect any combination of the multiple interaction interfaces which in turn contribute in complex ways to the overall cellular phenotype.
 An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein 20. Similarly, a DMS scan of ubiquitin, was previously completed 21. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map.
 %Sampson2001: The small ubiquitin-like modifier-1 (SUMO-1) consensus sequence mediates Ubc9 binding and is essential for SUMO-1 modification. 
