--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{ut-thesis}
 \usepackage{xcolor}
+\usepackage{graphicx}
+
 
 \degree{Doctor of Philosophy}
 \department{Molecular Genetics}
