more sumo detail

--- a/introduction.tex
+++ b/introduction.tex
@@ -45,16 +45,30 @@ Complementation and Y2H promise to be useful tools in the classification of vari
 % \section{Edgotyping}
 
 \section{Background: The Sumoylation Pathway}
+\label{intro:sumoylation}
 
-An ideal context for developing sequence-function technology can be found in the sumoylation pathway. The pathway is of great biological importance, mechanistically complex and has been well studied previously in terms of structure and mechanism. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes, explaining the essentiality of the core members of the pathway~\todo{REF}. 
-Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\cite{sumoylation}. After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. Next, an E1 activation complex forms a thioester bond between the SUMO diglycine and a cysteine residue within the E1 protein under the consumption of ATP. The activated SUMO is then transferred to the E2 conjugase (UBE2I) via transesterification. The loaded E2 can recognize target proteins via an exposed motif of four amino acids containing a central lysine~\cite{Sampson2001}. This lysine enters the E2’s active site where it comes into contact with SUMO’s diglycine, forming a peptide bond between its $\epsilon$-amino group and SUMO’s C-terminus~\cite{BernierVillamor2002}. This process can be made more efficient in the presence of some classes E3 proteins or outright forced by others~\cite{Streich2016}. Like ubiquitin, SUMO can also form chains, a process which relies on E2 homodimerization as well as the non-covalent binding of a second SUMO molecule to the loaded E2~\cite{CapiliLima2007,Alontaga2015}. 
-
+In the following chapters, we will evaluate the performance of sequence-function technology such as Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{img/sumoylation_steps.pdf}
-	\caption{Steps in the sumoylation pathway}
+	\caption{Steps in the sumoylation cascade. SENP protease matures a SUMO precursor by cleaving off its four C-terminal residues. In the activation step, the E1 complex forms a thioester bond  between SUMO and one of its cysteine residues under ATP consumption. It then transestereficates SUMO to the E2. The E2 recognizes potential targets via their $\Psi$KXE motif. With the help of an E3, SUMO is then ligated to the central lysine within that motif. SENP proteases can reverse the process by hydrolysing this new peptide bond. Images are based on the following PDB structures: \texttt{2G4D}~\cite{Xu2006}, \texttt{3KYC}~\cite{Olsen2010}, \texttt{4W5V}~\cite{ReiterEtAl}, \texttt{3UIP}~\cite{Gareau2012}}
+	\label{fig:sumoylation_steps}
 \end{figure}
+
+Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\cite{sumoylation} (Figure \ref{fig:sumoylation_steps}). After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. In humans, this process is performed by two proteases, SENP1 and SENP2. Next, an E1 activation complex (UBA2-SAE1) forms a thioester bond between the SUMO C-terminal diglycine and a cysteine residue within the E1 protein under the consumption of ATP. An E2 conjugase (UBE2I) binds to the complex, so that the activated SUMO can be transfered to one of its own cysteine residues via transesterification. 
+
+The thus loaded E2 can recognize potential target proteins via an exposed motif of four amino acids. The motif is generally described as $\Psi$KxD/E, i.e. a large hydrophobic residue, followed by a lysine, a spacer residue and an acidic residue~\cite{Sampson2001}. The motif is often found in an extended loop extending from the protein or in a disordered region~\todo{REF}. The central lysine within the motif enters the E2’s active site where it comes into contact with the SUMO diglycine. There, a peptide bond is formed between the lysine $\epsilon$-amino group and the SUMO C-terminus~\cite{BernierVillamor2002}. This process can be made more efficient in the presence E3 proteins. It is interesting to note, that while only a single SUMO E2 conjugase (UBE2I) is encoded by the human genome, there is a variety of different SUMO E3 ligases. Some work by simply stabilizing the SUMO-E2 complex, while others can outright force-feed non-canonical targets to the E2~\cite{Streich2016}. 
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{img/sumo_chaining.pdf}
+	\caption{Steps in SUMO chain formation as proposed by Alontaga and colleagues~\cite{Alontaga2015}. An E2 noncovalently interacts with a SUMO modification of a target protein. A second E2 carrying a covalently bound second SUMO binds the first E2-SUMO complex, allowing for the first SUMO's N-terminal tail to enter the active site, where a lysine within the tail is forms a peptide bond with the second SUMO's C-terminus. Finally, the complex dissociates, leaving behind the newly formed SUMO chain. Images are based on the following PDB structures: \texttt{3UIP}~\cite{Gareau2012}, \texttt{4Y1L}~\cite{Alontaga2015}}
+	\label{fig:sumo_chaining}
+\end{figure}
+
+Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{CapiliLima2007}. According to a model proposed by Alontaga and colleagues~\cite{Alontaga2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated.
+
 
 
 Given the complexity of the Sumoylation system, especially surrounding the E2 component, an examination of sequence-structure-function relationships becomes a multifaceted problem. Mutations could in principle affect any combination of the multiple interaction interfaces which in turn contribute in complex ways to the overall cellular phenotype.
@@ -64,4 +78,6 @@ An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded
 %Streich2016: Capturing a substrate in an activated RING E3/E2–SUMO complex
 %CapiliLima2007: Structure and analysis of a complex between SUMO and Ubc9 illustrates features of a conserved E2-Ubl interaction
 %Alontaga2015: RWD Domain as an E2 (Ubc9)-Interaction Module
-
+%Xu2006: http://www.biochemj.org/content/398/3/345
+%Olsen et al. 2010 (Lima Lab) Active site remodelling accompanies thioster bond formation in the SUMO E1
+%Katherine H. Reiter‡, Anita Ramachandran‡, Xue Xia‡, Lauren E. Boucher‡,§, Jürgen Bosch‡,§ and Michael J. Matunis‡1Characterization and Structural Insights into Selective E1-E2 Interactions in the Human and Plasmodium falciparum SUMO Conjugation Systems.
